# ape-dts

./: .gitignore  CLI_IMPLEMENTATION_REPORT.md  Cargo.toml  MIGRATION_REPORT.md  ape-dts-prd.txt  coverage.out  coverage_all.out  coverage_cli.out  coverage_config.out  coverage_final.out  coverage_task.out  coverage_utils.out  final_coverage.out  go.mod  go.sum  package-lock.json  test-config.ini
.taskmaster/: state.json
.taskmaster/docs/: prd.md  prd.txt  test-improvements-prd.txt
cmd/ape-dts/: main.go  main_test.go
docs/: filter_router_guide.md
dt-common/src/: rdb_filter.rs
dt-common/src/config/: filter_config.rs  router_config.rs  task_config.rs
dt-connector/src/: rdb_router.rs
dt-main/: Cargo.toml
dt-main/src/: cli.rs  lib.rs  main.rs
dt-main/tests/: e2e_tests.rs  integration_tests.rs  integration_tests_additional.rs
dt-pipeline/src/: filter_processor.rs  lib.rs  processor_chain.rs  router_processor.rs
examples/: mysql_to_mysql.ini
scripts/: generate_migration.sh
