[package]
name = "dt-main"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ape-dts"
path = "src/main.rs"

[lints]
workspace = true

[features]
metrics = ["dt-task/metrics"]

[dependencies]
dt-task = {path = "../dt-task", version = "0.1.0"}
dt-precheck = {path = "../dt-precheck", version = "0.1.0"}

tokio = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.0"